kubernetes/nextcloud-fpm/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud-fpm
  labels:
    app-ingress: ""
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: nextcloud-fpm
    app.kubernetes.io/instance: nextcloud-fpm
    ca-bundle: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "0"
